<resources>
    <string name="app_name">FutterApp</string>
    <string name="dog">Dog</string>
    <string name="meal">Meal</string>
    <string name="fridge">Fridge</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="addRating">New</string>
    <string name="showRatings">List</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="meat">Meat</string>
    <string name="group">Group</string>
    <string name="ingredient">Ingredient</string>
    <string name="gram">Gram</string>
    <string name="carbs">Carbs</string>
    <string name="delete">Delete</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="save">Save</string>
    <string name="add_component">Add Component</string>
    <string name="veggies">Vegetables</string>
    <string name="others">Others</string>
    <string name="addMeal">New</string>
    <string name="select_group">Select Group</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_ingredient">Select Ingredient</string>
    <string name="veggiesCooked">Cooked Vegetables</string>
    <string name="veggiesRaw">Raw Vegetables</string>
    <string name="showMeals">List</string>
    <string name="next">Next</string>
    <string name="feed">Feed!</string>
    <string name="food">Food</string>
    <string name="content">Content</string>
    <string name="addPacks">Fill</string>
    <string name="amount">Amount</string>
    <string name="statistics">Statistics</string>
    <string name="calendar">Calendar</string>
    <string name="addons">Supplements</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="pack">Pack(s)</string>
    <string name="new_food">New</string>
    <string name="saved_rating">Saved Rating</string>
    <string name="saved_rating_error">Could not save Rating</string>
    <string name="insert_meal">Saved Meal</string>
    <string name="insert_meal_error">Could not save meal</string>
    <string name="insert_pack">Saved Pack(s)</string>
    <string name="insert_pack_error">Could not insert Pack(s)</string>
    <string name="empty_database">Empty Database</string>
    <string name="empty_database_warning">Do you really want to delete all your data? This will be permanent, the data
        will not be recovarable.
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_database_canceled">Your data are kept.</string>
</resources>