<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" >
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/group"
                    android:padding="3dip" android:textStyle="bold"/>
            <TextView
                    android:text="@string/ingredient"
                    android:padding="3dip" android:textStyle="bold"/>
            <TextView
                    android:text="@string/gram"
                    android:padding="3dip" android:textStyle="bold"/>
            <TextView
                    android:text="@string/delete"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/meat"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/carbs"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/veggies"
                    android:padding="3dip"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/others"
                    android:padding="3dip"/>
        </TableRow>
    </TableLayout>
    <Button
            android:text="@string/add_component"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_addingredient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_savemeal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>