<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fridge_item_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/group"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fridge_foodgroup"
                tools:layout_editor_absoluteX="1dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/food"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fridge_foodname"
                app:layout_constraintStart_toEndOf="@+id/tv_fridge_foodgroup" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/gram"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fridge_gram"
                app:layout_constraintStart_toEndOf="@+id/tv_fridge_foodname" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/amount"
                android:layout_width="97dp"
                android:layout_height="wrap_content" android:id="@+id/tv_fridge_amount"
                app:layout_constraintStart_toEndOf="@+id/tv_fridge_gram" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
