<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/meal_component_item_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:id="@+id/image_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/group"/>
        <TextView
                android:text="@string/ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ingredient"
                app:layout_constraintEnd_toStartOf="@+id/tv_gram"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/image_group"
                android:layout_marginStart="24dp"/>
        <TextView
                android:text="@string/gram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_gram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>